--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "helmet": "^7.1.0",
     "https": "^1.0.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.0"
+  },
+  "type": "module",
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
