--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "helmet": "^7.1.0",
     "https": "^1.0.0",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "ws": "^8.17.0"
   },
   "type": "module",
   "scripts": {
