--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,24 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "firebase-functions": "^5.0.1",
     "helmet": "^7.1.0",
     "https": "^1.0.0",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
     "ws": "^8.17.0"
   },
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "nodemon server.js"
+  },
+  "engines": {
+    "node": "22"
   }
 }
