--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,18 @@
 {
+  "name": "server",
+  "version": "1.0",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "nodemon server.js",
+    "deploy": "firebase deploy --only functions:api"
+  },
+  "engines": {
+    "node": "22"
+  },
   "dependencies": {
+    "@fastify/csrf-protection": "^6.4.1",
+    "@google-cloud/functions-framework": "^3.4.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -9,16 +22,10 @@
     "firebase-functions": "^5.0.1",
     "helmet": "^7.1.0",
     "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
+    "promise-mysql": "^5.2.0",
     "ws": "^8.17.0"
-  },
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "start": "nodemon server.js"
-  },
-  "engines": {
-    "node": "22"
   }
 }
