Google Cloud SQL(MySql), Cloud Functions(my api), it finally works! # VPC Connection, # 5DAYS OF WORKS

--- a/server/firebase.json
+++ b/server/firebase.json
@@ -9,8 +9,10 @@
         "firebase-debug.log",
         "firebase-debug.*.log",
         "*.local"
-      ]
-    
+      ],
+      "functions": {
+        "vpcConnector": "shadow-connection"
+      }
     }
   ]
 }
