--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "server",
   "version": "1.0",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "nodemon server.js",
-    "deploy": "firebase deploy --only functions:api"
+    "deploy": "firebase deploy --only functions"
   },
   "engines": {
     "node": "22"
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "firebase-admin": "^12.1.1",
     "firebase-functions": "^5.0.1",
     "helmet": "^7.1.0",
     "https": "^1.0.0",
