--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,6 @@
     "node": "22"
   },
   "dependencies": {
-    "@fastify/csrf-protection": "^6.4.1",
-    "@google-cloud/functions-framework": "^3.4.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -26,7 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
-    "promise-mysql": "^5.2.0",
+    "sqlite3": "^5.1.7",
     "ws": "^8.17.0"
   }
 }
