--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
+    "redis": "^4.6.14",
     "sqlite3": "^5.1.7",
     "ws": "^8.17.0"
   }
