--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "firebase": "^10.12.4",
     "firebase-admin": "^12.1.1",
+    "firebase-auth": "^0.1.2",
     "firebase-functions": "^5.0.1",
     "helmet": "^7.1.0",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
     "redis": "^4.6.14",
