--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "browser-image-compression": "^2.0.2",
     "dotenv": "^16.4.5",
     "firebase": "^10.11.1",
     "firebase-auth": "^0.1.2",
