--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "node": "22"
   },
   "dependencies": {
+    "@firebase/app-check": "^0.8.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "firebase-admin": "^12.1.1",
     "firebase-auth": "^0.1.2",
     "firebase-functions": "^5.0.1",
+    "firebase-storage": "^1.1.4",
     "helmet": "^7.1.0",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
