--- a/server/package.json
+++ b/server/package.json
@@ -23,11 +23,13 @@
     "firebase-auth": "^0.1.2",
     "firebase-functions": "^5.0.1",
     "firebase-storage": "^1.1.4",
+    "googleapis": "^140.0.1",
     "helmet": "^7.1.0",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.0",
     "redis": "^4.6.14",
     "sqlite3": "^5.1.7",
