--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -8,23 +8,28 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
     server {
-       listen       443 ssl;
+       listen       8443 ssl;
        server_name  127.0.0.1;
-
        ssl_certificate     /etc/nginx/ssl/client.cert;
        ssl_certificate_key /etc/nginx/ssl/client.key;
-
        ssl_session_cache    shared:SSL:1m;
        ssl_session_timeout  5m;
-
-       ssl_ciphers  HIGH:!aNULL:!MD5;
        ssl_prefer_server_ciphers  on;
 
        location / {
-           root   /usr/share/nginx/html/;
-           index  index.html;
-           try_files $uri /index.html;
+          proxy_pass https://127.0.0.1:443;  
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header X-Forwarded-Proto $scheme;
+          add_header 'Access-Control-Allow-Origin' '*';
+          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+          add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Authorization';
+          root   /usr/share/nginx/html/;
+          index  index.html;
         }
+
+        error_page 404 /index.html;
 
     }
 
