--- a/server/package.json
+++ b/server/package.json
@@ -12,26 +12,26 @@
     "node": "22"
   },
   "dependencies": {
-    "@firebase/app-check": "^0.8.7",
+    "@firebase/app": "^0.10.13",
     "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "express-rate-limit": "^7.4.0",
-    "firebase": "^10.13.1",
-    "firebase-admin": "^12.5.0",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "firebase": "^10.14.1",
+    "firebase-admin": "^12.6.0",
     "firebase-auth": "^0.1.2",
-    "firebase-functions": "^6.0.0",
+    "firebase-functions": "^6.0.1",
     "firebase-storage": "^1.1.4",
-    "helmet": "^7.1.0",
+    "helmet": "^8.0.0",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.11.2",
+    "mysql2": "^3.11.3",
     "nodemailer": "^6.9.15",
-    "nodemon": "^3.1.4",
-    "pg": "^8.12.0",
+    "nodemon": "^3.1.7",
+    "pg": "^8.13.0",
     "ws": "^8.18.0"
   }
 }
