--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "start https://127.0.0.1 & nodemon server.js",
-    "next": "nodemon content/wss/webSocketServer.js",
+    "next": "start https://127.0.0.1:8443 & nodemon content/wss/webSocketServer.js",
     "deploy": "firebase deploy --only functions:api"
   },
   "engines": {
