--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,22 +1,38 @@
-FROM node:22.9.0-alpine as build
+# syntax=docker/dockerfile:1
 
-WORKDIR /src/app
+# Comments are provided throughout this file to help you get started.
+# If you need more help, visit the Dockerfile reference guide at
+# https://docs.docker.com/go/dockerfile-reference/
 
+# Want to help us make this template better? Share your feedback here: https://forms.gle/ybq9Krt8jtBL3iCk7
+
+ARG NODE_VERSION=22.9.0
+
+FROM node:${NODE_VERSION}-alpine
+
+# Use production node environment by default.
+# ENV NODE_ENV production
+
+
+WORKDIR /usr/src/app
+
+# Download dependencies as a separate step to take advantage of Docker's caching.
+# Leverage a cache mount to /root/.npm to speed up subsequent builds.
+# Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into
+# into this layer.
 RUN --mount=type=bind,source=package.json,target=package.json \
     --mount=type=bind,source=package-lock.json,target=package-lock.json \
     --mount=type=cache,target=/root/.npm \
-    npm ci 
-    
+    npm ci --omit=dev
+
+# Run the application as a non-root user.
 USER node
 
+# Copy the rest of the source files into the image.
 COPY . .
 
-FROM node:22.9.0-alpine as production
+# Expose the port that the application listens on.
+EXPOSE 8443
 
-WORKDIR /src/app
-
-COPY --from=build /src/app /src/app
-
-EXPOSE 443
-
-CMD node server.js
+# Run the application.
+CMD npm start
