--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ dist
 dist-ssr
 *.local
 
-# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -25,6 +24,7 @@ dist-ssr
 *.sln
 *.sw?
 *.env
+*.env.production
 *.env.prod
 *.key
 senderson.sql
@@ -32,14 +32,6 @@ public
 # Firebase cache
 .firebase/
 
-# Firebase config
-
-# Uncomment this if you'd like others to create their own Firebase project.
-# For a team working on the same Firebase project(s), it is recommended to leave
-# it commented so all members can deploy to the same project(s) in .firebaserc.
-# .firebaserc
-
-# Runtime data
 pids
 *.pid
 *.seed
@@ -66,6 +58,8 @@ bower_components
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
+ssl/
+
 # Dependency directories
 node_modules/
 
@@ -81,8 +75,6 @@ node_modules/
 # Output of 'npm pack'
 *.tgz
 
-# Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
+
