--- a/server/nginx/Dockerfile
+++ b/server/nginx/Dockerfile
@@ -1,7 +1,8 @@
+
 FROM nginx:latest
 
 RUN rm /etc/nginx/conf.d/default.conf
 
-COPY ./ssl-dev/ /etc/nginx/conf.d
-
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+
+COPY  ./ssl /etc/nginx/ssl
