--- a/server/nginx/nginx.conf
+++ b/server/nginx/nginx.conf
@@ -2,8 +2,8 @@
        listen       443 ssl;
        server_name  127.0.0.1;
 
-       ssl_certificate     /etc/nginx/conf.d/server.cert;
-       ssl_certificate_key  /etc/nginx/conf.d/server.key;
+       ssl_certificate     /etc/nginx/ssl/server.cert;
+       ssl_certificate_key  /etc/nginx/ssl/server.key;
 
        ssl_session_cache    shared:SSL:1m;
        ssl_session_timeout  5m;
@@ -12,7 +12,7 @@
        ssl_prefer_server_ciphers  on;
 
        location / {
-       proxy_pass https://127.0.0.1:8443;
+       proxy_pass https://express-rt:443;
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
